      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added
      new doc section "Custom Comparators".
    
- mssql
    - If the column is part of a ``primary_key`` it will be
      ``NOT NULL`` since MSSQL doesn't allow ``NULL`` in primary_key
      columns.

    - ``MSBinary`` now returns a ``BINARY`` instead of an
      ``IMAGE``. This is a backwards incompatible change in that
      ``BINARY`` is a fixed length data type whereas ``IMAGE`` is
      a variable length data type. [ticket:1249]

    - ``get_default_schema_name`` is now reflected from the
      database based on the user's default schema. This only works
      with MSSQL 2005 and later. [ticket:1258]

    - Added collation support through the use of a new collation
      argument. This is supported on the following types: char,
      nchar, varchar, nvarchar, text, ntext. [ticket:1248]

    - Changes to the connection string parameters favor DSN as the
      default specification for pyodbc. See the mssql.py docstring
      for detailed usage instructions.

    - Added experimental support of savepoints. It
      currently does not work fully with sessions.

    - Support for three levels of column nullability: NULL,
      NOT NULL, and the database's configured default.  The default
      Column configuration (nullable=True) will now generate NULL
      in the DDL. Previously no specification was emitted and the
      database default would take effect (usually NULL, but not
      always).  To explicitly request the database default,
      configure columns with nullable=None and no specification
      will be emitted in DDL. This is backwards incompatible
      behavior. [ticket:1243]

- postgres
    - Calling alias.execute() in conjunction with